--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="styles.css" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 </head>
 <html>
 <body>
