--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head> 
-<title> BAKAPLAN </title>
+<title> BAKAPLAN-Beta </title>
 <link rel="stylesheet" href="styles.css" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
