--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 <h1><a href="../cgi-bin/bakaplan/branchdetails.html">Click to Enter </a></h1>
 
 </div>
+<div id="details" align = "center">
+<br><br>
+<b>How to use?</b> <a href="https://github.com/GreatDevelopers/bakaplan#readme"> User Guide </a>
+<br>
+<!--<b>Start using</b> http://202.164.53.116/~mandeep/cgi-bin/bakaplan/branchdetails.html-->
+<b>Get source code</b> <a href="https://github.com/GreatDevelopers/bakaplan"> Click Here </a>
+<br>
+<b>Submit any Bug</b> <a href="https://github.com/GreatDevelopers/bakaplan/issues/new#"> Click Here </a>
+<br>
+
+</div>
 </div>
 </body>
 </html>
