--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 </div>
 <div id="details" align = "center">
+<br>
+Version: Beta
 <br><br>
 <b>How to use?</b> <a href="https://github.com/GreatDevelopers/bakaplan#readme"> User Guide </a>
 <br>
