--- a/index.html
+++ b/index.html
@@ -9,23 +9,31 @@
 <body>
 <div id="wrapper">
 <div id ="nachdaBalak"> 
+<br><br>
 <img src="images/baka.png">
+</div>
+<div id="intro" align = "center">
+<br>
+Version : Beta
+<br>
+BAKAPLAN is a software that creates seating plan for examination. 
+<br>
+It provides four different strategies to create seat plan.
+<br><br>
 </div>
 <div id="banner">
 <h1><a href="../cgi-bin/bakaplan/branchdetails.html">Click to Enter </a></h1>
 
 </div>
-<div id="details" align = "center">
+<div id="details" align = "center" valign = "bottom" height = "240%">
+<br><br><br><br><br><br><br><br>
+<a href="https://github.com/GreatDevelopers/bakaplan#readme"> How to use?</a>
+ | <a href="https://github.com/GreatDevelopers/bakaplan"> Get Source Code </a>
+ | <a href="https://github.com/GreatDevelopers/bakaplan/issues/new#"> Submit any Feature/Bug </a>
+ | <a href="https://github.com/GreatDevelopers/bakaplan#authors"> Contact Us </a>
 <br>
-Version: Beta
-<br><br>
-<b>How to use?</b> <a href="https://github.com/GreatDevelopers/bakaplan#readme"> User Guide </a>
 <br>
-<!--<b>Start using</b> http://202.164.53.116/~mandeep/cgi-bin/bakaplan/branchdetails.html-->
-<b>Get source code</b> <a href="https://github.com/GreatDevelopers/bakaplan"> Click Here </a>
-<br>
-<b>Submit any Bug</b> <a href="https://github.com/GreatDevelopers/bakaplan/issues/new#"> Click Here </a>
-<br>
+Copyright &copy; 2013 Mandeep Kaur
 
 </div>
 </div>
