--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 <div id="intro" align = "center">
 <br>
-Version : Beta
+<b>Version : Beta</b>
 <br>
 BAKAPLAN is a software that creates seating plan for examination. 
 <br>
