--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 <img src="images/baka.png">
 </div>
 <div id="intro" align = "center">
+<br><br>
+<b>Version :</b> Beta
 <br>
-<b>Version : Beta</b>
-<br>
-BAKAPLAN is a software that creates seating plan for examination. 
-<br>
-It provides four different strategies to create seat plan.
+Prepare seating plan for examination.
 <br><br>
 </div>
 <div id="banner">
@@ -26,14 +24,17 @@ It provides four different strategies to create seat plan.
 
 </div>
 <div id="details" align = "center" valign = "bottom" height = "240%">
-<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br>
 <a href="https://github.com/GreatDevelopers/bakaplan#readme"> How to use?</a>
  | <a href="https://github.com/GreatDevelopers/bakaplan"> Get Source Code </a>
  | <a href="https://github.com/GreatDevelopers/bakaplan/issues/new#"> Submit any Feature/Bug </a>
  | <a href="https://github.com/GreatDevelopers/bakaplan#authors"> Contact Us </a>
 <br>
 <br>
-Copyright &copy; 2013 Great Developers
+Brought to you by 
+<a href="https://github.com/GreatDevelopers/bakaplan#authors">GreatDevelopers </a> 
+under 
+<a href="https://github.com/GreatDevelopers/bakaplan/blob/master/LICENSE"> GPL</a>
 
 </div>
 </div>
