--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <title> BAKAPLAN-Beta </title>
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Quicksand|Julius+Sans+One' rel='stylesheet' type='text/css'>
 </head>
 <html>
 <body>
+<header>
+<div id="logo">
+<h1> Baka Plan </h1>
+</div>
+<nav><ul> </nav> 
+</header>
 <div id="wrapper">
-<div id ="nachdaBalak"> 
+<!--<div id ="nachdaBalak"> 
 <br><br>
-<img src="images/baka.png">
+<h1> BAKA-PLAN </h1>
 </div>
 <div id="intro" align = "center">
 <br><br>
@@ -22,7 +28,7 @@ Prepare seating plan for examination.
 <div id="banner">
 <h1><a href="../cgi-bin/bakaplan/branchdetails.html">Click to Enter </a></h1>
 
-</div>
+</div>-->
 <div id="details" align = "center" valign = "bottom" height = "240%">
 <br><br><br><br><br><br><br><br><br>
 <a href="https://github.com/GreatDevelopers/bakaplan#readme"> How to use?</a>
