Revert "index.html"
This reverts commit 8ed16aaa41fef09cef0f1a1ffcc22f66dc9cc379.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 <h1> BAKA-PLAN </h1>
 </div>
 <div id="intro" align = "center">
-<br><br>
-<b>Version :</b> Beta
 <br>
-Prepare seating plan for examination.
+<b>Version : Beta</b>
+<br>
+BAKAPLAN is a software that creates seating plan for examination. 
+<br>
+It provides four different strategies to create seat plan.
 <br><br>
 </div>
 <div id="banner">
@@ -30,17 +32,14 @@ Prepare seating plan for examination.
 
 </div>-->
 <div id="details" align = "center" valign = "bottom" height = "240%">
-<br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
 <a href="https://github.com/GreatDevelopers/bakaplan#readme"> How to use?</a>
  | <a href="https://github.com/GreatDevelopers/bakaplan"> Get Source Code </a>
  | <a href="https://github.com/GreatDevelopers/bakaplan/issues/new#"> Submit any Feature/Bug </a>
  | <a href="https://github.com/GreatDevelopers/bakaplan#authors"> Contact Us </a>
 <br>
 <br>
-Brought to you by 
-<a href="https://github.com/GreatDevelopers/bakaplan#authors">GreatDevelopers </a> 
-under 
-<a href="https://github.com/GreatDevelopers/bakaplan/blob/master/LICENSE"> GPL</a>
+Copyright &copy; 2013 Great Developers
 
 </div>
 </div>
