--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ It provides four different strategies to create seat plan.
  | <a href="https://github.com/GreatDevelopers/bakaplan#authors"> Contact Us </a>
 <br>
 <br>
-Copyright &copy; 2013 Great Developers
+Copyright &copy; 2013 Mandeep Kaur
 
 </div>
 </div>
