Revert "index.html"
This reverts commit 8e92ba0aca1898c44d2c6efce8cdb229c7c4dbf3.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <div id="intro" align = "center">
 <br>
-<b>Version : Beta</b>
+Version : Beta
 <br>
 BAKAPLAN is a software that creates seating plan for examination. 
 <br>
