--- a/index.html
+++ b/index.html
@@ -3,45 +3,41 @@
 <title> BAKAPLAN-Beta </title>
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-<link href='http://fonts.googleapis.com/css?family=Quicksand|Julius+Sans+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 </head>
 <html>
 <body>
-<header>
-<div id="logo">
-<h1> Baka Plan </h1>
-</div>
-<nav><ul> </nav> 
-</header>
 <div id="wrapper">
-<!--<div id ="nachdaBalak"> 
+<div id ="nachdaBalak">
 <br><br>
-<h1> BAKA-PLAN </h1>
+<img src="images/baka.png">
 </div>
 <div id="intro" align = "center">
+<br><br>
+<b>Version :</b> Beta
 <br>
-Version : Beta
-<br>
-BAKAPLAN is a software that creates seating plan for examination. 
-<br>
-It provides four different strategies to create seat plan.
+Prepare seating plan for examination.
 <br><br>
 </div>
 <div id="banner">
 <h1><a href="../cgi-bin/bakaplan/branchdetails.html">Click to Enter </a></h1>
 
-</div>-->
+</div>
 <div id="details" align = "center" valign = "bottom" height = "240%">
-<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br>
 <a href="https://github.com/GreatDevelopers/bakaplan#readme"> How to use?</a>
  | <a href="https://github.com/GreatDevelopers/bakaplan"> Get Source Code </a>
  | <a href="https://github.com/GreatDevelopers/bakaplan/issues/new#"> Submit any Feature/Bug </a>
  | <a href="https://github.com/GreatDevelopers/bakaplan#authors"> Contact Us </a>
 <br>
 <br>
-Copyright &copy; 2013 Mandeep Kaur
+Brought to you by
+<a href="https://github.com/GreatDevelopers/bakaplan#authors">GreatDevelopers </a>
+under
+<a href="https://github.com/GreatDevelopers/bakaplan/blob/master/LICENSE"> GPL</a>
 
 </div>
 </div>
 </body>
 </html>
+
