--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@ Prepare seating plan for examination.
 
 </div>
 <div id="details" align = "center" valign = "bottom" height = "240%">
-<br><br><br><br><br><br><br><br><br>
+<br><br>
+<div id="details" align = "center" valign = "bottom" height = "240%">
+<a href="http://www.easycounter.com/">
+<img src="http://www.easycounter.com/counter.php?megha55"
+border="0" alt="Web Counters"></a>
+<br><a href="http://www.easycounter.com/">Web Counters</a>
+
+<br><br><br><br><br><br><br>
+
 <a href="https://github.com/GreatDevelopers/bakaplan#readme"> How to use?</a>
  | <a href="https://github.com/GreatDevelopers/bakaplan"> Get Source Code </a>
  | <a href="https://github.com/GreatDevelopers/bakaplan/issues/new#"> Submit any Feature/Bug </a>
